k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sg-intranet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: log-volume
          emptyDir: {}
        - name: fluent-bit-config
          configMap:
            name: fluent-bit-config
      containers:
        - name: backend
          image: 881005428220.dkr.ecr.eu-north-1.amazonaws.com/societe_generale:backend-latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: log-volume
              mountPath: /var/log/app

        - name: fluent-bit
          image: fluent/fluent-bit:3.0
          volumeMounts:
            - name: log-volume
              mountPath: /var/log/app
            - name: fluent-bit-config
              mountPath: /fluent-bit/etc/
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sg-intranet
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
